[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["yzakius <dev@yzakius.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]